<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Diet Plan A</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="radiobutton_mor">아침</string>
    <string name="radiobutton_lun">점심</string>
    <string name="radiobutton_di">저녁</string>
    <string name="radiobutton_sna">간식</string>
    <string name="btn_measure">식사량 측정</string>
    <string name="et_diary">//수정중</string>
    <string name="et_pass">Password</string>
    <string name="et_pass_confirm">Password Confirm</string>
    <string name="btn_login">login</string>
    <string name="month">month</string>
    <string name="camera">Camera</string>
    <string name="percent">%</string>
    <string name="todo">TODO</string>
    <string name="loading">Loading</string>
    <string name="summary">요약</string>
    <string name="search_food">음식 검색</string>
    <string name="left_cal">남은 칼로리</string>
    <string name="consumed_cal">소비한 칼로리</string>
    <string name="recommend_cal">일일 권장</string>
    <string name="diet_cal">목표 권장</string>
    <string name="cancel">취소</string>
    <string name="save_food">음식 저장하기</string>
    <string name="fri">FRI</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="sat">SAT</string>
    <string name="setting_goal">목표 설정하기</string>
    <string name="setting_info">회원정보 수정하기</string>
    <string name="setting_data">데이터 초기화</string>
    <string name="setting">설정</string>
    <string name="library">library</string>
    <string name="save_diary">식단일기 저장하기</string>
    <string name="create_account">create account</string>
    <string name="send_email">이메일 전송</string>
    <string name="tansuwhamul">탄수화물</string>
    <string name="danbakjil">단백질</string>
    <string name="jibang">지방</string>
    <string name="search">검색</string>
    <string name="login_title">다이어트 플랜A</string>
    <string name="login_title2">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_create_account">Create ACCOUNT</string>
    <string name="setup_pw">비밀번호 재설정</string>
    <string name="setup_goal">목표 설정하기</string>
    <string name="cm">신장(cm)</string>
    <string name="PVkg">현재 체중(kg)</string>
    <string name="FVkg">목표 체중(kg)</string>
    <string name="board">게시판</string>
    <string name="morning">아침</string>
    <string name="lunch">점심</string>
    <string name="dinner">저녁</string>
    <string name="snack">간식</string>
    <string name="total">total:---</string>
    <string name="score">식단 점수</string>
    <string name="setup_message">목표를 설정하세요.\n목표 설정시 하루 권장 칼로리를 제공합니다.</string>
    <string name="setting_reset">데이터 초기화</string>
    <string name="setting_reset_pre"><![CDATA[아래의 <데이터 초기화> 버튼 클릭 후\n날짜 선택시에 해당 데이터가 삭제됩니다.]]></string>
    <string name="stats">통계</string>
    <string name="blank" />
    <string name="stat_kcal"><![CDATA[<일일 섭취 칼로리>]]></string>
    <string name="_170">170</string>
    <string name="_100">100</string>
    <string name="_80">80</string>
    <string name="change_kg"><![CDATA[<체중 변화>]]></string>
    <string name="setting_edit">회원정보 수정하기</string>
    <string name="goal_day">목표 날짜</string>
    <string name="gender">성별</string>
    <string name="reset_data">데이터 초기화</string>
    <string name="woman">여자</string>
    <string name="man">남자</string>
    <string name="unshare">비공유</string>
    <string name="share">공유</string>
    <string name="setting_password">비밀번호 재설정</string>
    <string name="et_age">나이</string>
    <string name="mailcode">EmailCode</string>
    <string name="kcal">칼로리 : </string>


    <string name="app_name1">Simple Bluetooth Terminal</string>
    <string name="devices">Bluetooth Devices</string>
    <string name="ck_product_mode">CkProduct</string>
    <string name="set_product_mode">SetProduct</string>
    <string name="clean_product_mode">ClnProduct</string>
    <string name="get_cali_data">GetCaliData</string>
    <string name="get_raw_data">GetRawData</string>
    <string name="get_inear_status">GetInearSta</string>
    <string name="logon">LOGON</string>
    <string name="logoff">LOGOFF</string>
    <string name="outcali">OutCali</string>
    <string name="incali">InCali</string>
    <string name="anc_high">ANCH</string>
    <string name="anc_low">ANCL</string>
    <string name="anc_wind">ANCW</string>
    <string name="sw_left_channel">LCHL</string>
    <string name="sw_right_channel">RCHL</string>
    <string name="measure">측정하기</string>
</resources>
