<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.BoardActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <!--게시판 xml-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_48dp"
            android:layout_height="@dimen/_48dp"
            android:layout_marginStart="@dimen/_28dp"
            android:layout_marginTop="@dimen/_50dp"
            android:background="@color/clear"
            android:drawableTop="@drawable/icon_back" />


        <TextView
            android:layout_width="wrap_content"
            style="@style/Montserrat20Pt3"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginStart="@dimen/_100dp"
            android:text="@string/board"/>
    </LinearLayout>

    <GridView
        android:id="@+id/gridview"
        android:layout_width="@dimen/_380dp"
        android:layout_height="@dimen/_610dp"
        android:numColumns="auto_fit"
        android:columnWidth="@dimen/_100dp"
        android:layout_gravity="center"
        android:stretchMode="columnWidth">

    </GridView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">

        <EditText
            android:id="@+id/board_foodName"
            style="@style/Montserrat20Pt"
            android:layout_width="280dp"
            android:layout_height="31dp"
            android:background="@drawable/box_rectangle"
            android:hint="@string/search_food"
            android:layout_marginStart="0dp"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/black"
            android:paddingStart="10dp"
            android:paddingEnd="10dp" />

        <Button
            android:id="@+id/board_searchBtn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@color/clear"
            android:fontFamily="@font/montserrat_bold"
            android:padding="0dp"
            android:text="@string/search"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:layout_marginStart="5dp"/>

        <Button
            android:id="@+id/board_CancelBtn"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@color/clear"
            android:fontFamily="@font/montserrat_bold"
            android:padding="0dp"
            android:text="@string/cancel"
            android:textColor="@color/dark"
            android:textSize="20sp"
            android:layout_marginStart="5dp"/>

    </LinearLayout>

</LinearLayout>