<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="58dp"
        android:background="@color/clear"
        android:drawableTop="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:lineSpacingExtra="-10sp"
        android:textColor="@color/dark"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="57dp"
        tools:text="오늘의 일기"
        tools:ignore="MissingConstraints" />


    <RadioButton
        android:id="@+id/radioButton_mor"
        style="@style/Montserrat15Pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/radiobutton_mor"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="39dp"
        tools:layout_editor_absoluteY="111dp" />

    <RadioButton
        android:id="@+id/radioButton_lun"
        style="@style/Montserrat15Pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/radiobutton_lun"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="110dp" />

    <RadioButton
        android:id="@+id/radioButton_di"
        style="@style/Montserrat15Pt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/radiobutton_di"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="220dp"
        tools:layout_editor_absoluteY="110dp" />

    <RadioButton
        style="@style/Montserrat15Pt"
        android:id="@+id/radioButton_sna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="59dp"
        android:text="@string/radiobutton_sna"
        android:minWidth="0dp"
        android:minHeight="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="110dp"
        tools:ignore="MissingConstraints"/>

    <ImageButton
        android:id="@+id/cameraBtn"
        android:layout_width="334dp"
        android:layout_height="207dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/box_rectangle"
        app:layout_constraintTop_toBottomOf="@+id/radioButton_mor"
        app:srcCompat="@drawable/icon_camera"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp" />

    <Button
        style="@style/Montserrat15Pt3"
        android:id="@+id/btn_measure"
        android:layout_width="162dp"
        android:layout_height="31dp"
        android:background="@drawable/btn_login_rectangle"
        android:fontFamily="@font/montserrat"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingLeft="0dp"
        android:paddingTop="0dp"
        android:paddingRight="0dp"
        android:paddingBottom="0dp"
        android:text="@string/btn_measure"
        android:textAllCaps="false"
        app:backgroundTint="@color/dark"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="380dp" />

    <EditText
        android:id="@+id/et_food"
        android:layout_width="164dp"
        android:layout_height="31dp"
        android:background="@drawable/box_rectangle"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="209dp"
        tools:layout_editor_absoluteY="380dp"
        android:importantForAutofill="no" />

    <TextView
        style="@style/Montserrat15Pt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="434dp"
        tools:text="식단 점수"
        tools:ignore="MissingConstraints"/>

    <SeekBar
        android:id="@+id/seekbar_score"
        android:thumb="@drawable/seekbar_score_thumb"
        android:progressDrawable="@drawable/seekbar_score"
        android:layout_width="270dp"
        android:layout_height="5dp"
        android:max="100"
        android:splitTrack="false"
        android:background="@color/cool_grey"
        tools:layout_editor_absoluteX="102.5dp"
        tools:layout_editor_absoluteY="444dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_diary"
        android:layout_width="334dp"
        android:layout_height="207dp"
        android:background="@drawable/box_rectangle"
        android:inputType="text"
        android:text="@string/et_diary"
        style="@style/Montserrat15Pt2"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="474dp"
        tools:ignore="MissingConstraints"/>

</androidx.constraintlayout.widget.ConstraintLayout>
