<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity."
    android:background="@color/white">

    <!--통계 xml 추이 그래프 페이지 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="50dp"
            android:background="@color/clear"
            android:drawableTop="@drawable/icon_back" />


        <TextView
            android:layout_width="wrap_content"
            style="@style/Montserrat25Pt2"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="104dp"
            android:text="@string/stats"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <!-- 일일 섭취 칼로리 표시 x축(일~토) 또는 주간 섭취 칼로리 표시 x축 3월 첫째주 ~ 마지막주 -->
        <com.github.mikephil.charting.charts.LineChart
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chart_weekly_cal" />

        <TextView
            android:text="@string/stat_kcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Montserrat15Pt2"
            android:layout_gravity="center"/>

        <!-- 주간 체중 변화 그래프 x축 ((1~7) ,~~ (29~30)-->
        <com.github.mikephil.charting.charts.LineChart
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/chart_weekly_kg"
            android:layout_marginTop="20dp"/>

        <TextView
            android:text="@string/change_kg"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Montserrat15Pt2"/>

    </LinearLayout>

  </LinearLayout>